# deals_finder

./: .env.docker  .gitignore  LICENSE  README.md  docker-compose.yml  docker-compose.yml.old
API Collection/: Deal Details.bru  Deal without Auth.bru  Deals with Auth.bru  Login.bru  Register Account.bru
APICollection/: Admin Exist.bru  Deals with Auth.bru  Fetch Deals.bru  Filters Data.bru  bruno.json
backend/: pyproject.toml
backend/app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/app/management/commands/: fetch_deals.py
backend/app/managment/commands/: fetch_deals.py
backend/app/migrations/: 0001_initial.py  0002_remove_store_images.py  0003_remove_deal_game_id_remove_deal_internal_name_and_more.py  0004_deal_store_name.py  0005_deal_steam_app_id_deal_steam_rating_text.py  0006_rename_steam_app_id_deal_steam_app_id.py  0007_alter_deal_steam_app_id.py  0008_alter_deal_steam_rating_text.py
backend/conf/: .pgpass  .postgres_service.conf  settings.py  urls.py
backend/data_retriever/: apps.py  models.py
backend/tests/: test_admin.py  test_admin_configuration.py  test_dummy.py  test_forms.py  test_management_commands.py  test_model.py  test_serializer.py  test_views.py
docker/: Dockerfile  test.yml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Button.tsx  Card.tsx  DropDownButton.tsx  Header.tsx  ImageThumb.tsx  RegisterLogin.tsx  Slider.tsx
frontend/src/config/: axios.config.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/views/Login/: Login.tsx
(+3 files in other folders)
